# constructor-hackathon

./: .env.example  .gitignore  README.md  benchmark_results.csv  edit.ipynb  pyproject.toml  requirements.txt  setup-hooks.sh
assets/: projects.csv  projects_info.csv  taxonomy.csv
results/generals_io_rl_demo/: Dockerfile  README.md  main.py  requirements.txt
results/llava_more_sampler_demo/: Dockerfile  README.md  main.py  requirements.txt
results/metade-jax-sphere-demo/: Dockerfile  README.md  main.py
results/reasoning_granularity_demo/: Dockerfile  README.md  main.py
src/: __main__.py  benchmark.py
src/adapter/: __init__.py  adapter_base.py  stateful_adapter.py  stateless_adapter.py
src/agent/: __init__.py  graph.py
src/service/: __init__.py  article_analyser.py  chat_model.py  csv_analyser.py  github_analyser.py
